<resources>
    <string name="app_name">Xperience It</string>
    <string name="title_activity_xperiences_list">xperiences_list</string>
    <string name="title_activity_xperience_details">Xperience Details</string>
    <string name="activity_customizations">Add Customizations</string>
    <string name="action_settings">Settings</string>

    <string name="slide_1_title">Xperience Birthdays</string>
    <string name="slide_1_desc">Explore the most attractive bookings in birthday parties</string>

    <string name="slide_2_title">Xperience Dinner</string>
    <string name="slide_2_desc">Explore the best restaurants for your special dinner</string>

    <string name="slide_3_title">Xperience Gifts</string>
    <string name="slide_3_desc">Explore the most awesome gifts for your loved ones</string>

    <string name="slide_4_title">Xperience Holidays</string>
    <string name="slide_4_desc">Explore the best tours with that special someone</string>

    <string name="my_preference">"com.example.com.MyPref"</string>
    <string name="my_preference_key">"com.example.com.MyPrefKey"</string>
    <string name="city_preference">City</string>

    <string name="search_bar_hint">Search Experiences Here</string>
    <string name="category_grid_heading">Browse Category</string>
    <string name="vacation_packages_heading">Our Trending Packages</string>
    <string name="special_offers_heading">Special Offers</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <string name="mobile_no_hint">Mobile Number</string>
    <string name="password_hint">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with_google">Continue With Google</string>
    <string name="login_with_fb">Continue With Facebook</string>
    <string name="new_to_app">New to our app?</string>

    <string name="empty_wishlist">Your wishlist is empty :(</string>
    <string name="book_now">Book Now</string>
    <string name="continue_booking">Continue</string>

    <string name="description_card_heading">Xperience Offered</string>
    <string name="include_card_heading">Arrangements</string>
    <string name="exclude_card_heading">Exclusions</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_deal_heading">About The Deal</string>
    <string name="about_deal_persons">Persons</string>
    <string name="about_deal_price">Price</string>
    <string name="about_deal_city">City</string>
    <string name="about_deal_address">Address</string>
    <string name="title_activity_search_bar">SearchBarActivity</string>
    <string name="facebook_app_id">201049367147722</string>
    <string name="fb_login_protocol_scheme">fb201049367147722</string>

    <!--Contact-->
    <string name="contact_us">Contact Us</string>
    <string name="contact_email">connect@xperienceit.in</string>
    <string name="contact_phone">+91-89209-33486</string>
    <string name="get_in_touch">You can Get in touch our 24/7 customer service anytime. </string>
    <string name="title_activity_location">Map</string>

</resources>
