<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    android:padding="5dp"
    cardview:cardBackgroundColor="@color/fabMenuBackground"
    cardview:cardCornerRadius="3dp"
    cardview:cardElevation="@dimen/cardview_elevation">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/about_deal_heading"
            android:textAppearance="@style/CardViewHeading" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray"
            android:padding="3dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:useDefaultMargins="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/layout_margin"
                    android:gravity="center"
                    android:text="@string/about_deal_persons"
                    android:textAppearance="@style/CardViewText"
                    android:textSize="@dimen/xtra_large_text" />

                <TextView
                    android:id="@+id/persons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/layout_margin"
                    android:gravity="center"
                    android:maxWidth="@dimen/grid_column_max_width"
                    android:textAppearance="@style/CardViewText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/layout_margin"
                    android:gravity="fill_horizontal"
                    android:maxWidth="@dimen/grid_column_max_width"
                    android:text="@string/about_deal_price"
                    android:textAppearance="@style/CardViewText"
                    android:textSize="@dimen/xtra_large_text" />

                <TextView
                    android:id="@+id/strike_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/layout_margin"
                    android:gravity="center"
                    android:maxWidth="@dimen/grid_column_max_width"
                    android:textAppearance="@style/SubText" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/layout_margin"
                    android:gravity="center"
                    android:maxWidth="@dimen/grid_column_max_width"
                    android:textAppearance="@style/CardViewText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:gravity="center"
                    android:text="@string/about_deal_city"
                    android:textAppearance="@style/CardViewText"
                    android:textSize="@dimen/xtra_large_text" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:gravity="center_horizontal"
                    android:maxHeight="@dimen/grid_column_max_width"
                    android:maxWidth="@dimen/grid_column_max_width"
                    android:textAppearance="@style/CardViewText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:gravity="center"
                    android:text="@string/about_deal_address"
                    android:textAppearance="@style/CardViewText"
                    android:textSize="@dimen/xtra_large_text" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:gravity="center_horizontal"
                    android:maxHeight="@dimen/grid_column_max_width"
                    android:maxLines="2"
                    android:maxWidth="@dimen/grid_column_max_width"
                    android:textAppearance="@style/CardViewText" />
            </LinearLayout>
        </GridLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>