<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xperienceit.ContactActivity">

    <LinearLayout
        android:id="@+id/contact_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/small_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="@dimen/big_margin"
            android:scaleType="fitXY"
            android:src="@drawable/email_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/xtra_small_margin"
                android:layout_marginRight="@dimen/xtra_small_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:maxLines="2"
                android:text="Email"
                android:textAppearance="@style/CardViewHeading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/xtra_small_margin"
                android:padding="@dimen/xtra_small_margin"
                android:text="@string/contact_email"
                android:textAppearance="@style/SubText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/bg_gray"
                android:padding="1dp" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_email"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="@dimen/big_margin"
            android:scaleType="fitXY"
            android:src="@drawable/call_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/xtra_small_margin"
                android:layout_marginRight="@dimen/xtra_small_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:maxLines="2"
                android:text="Phone"
                android:textAppearance="@style/CardViewHeading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/xtra_small_margin"
                android:padding="@dimen/xtra_small_margin"
                android:text="@string/contact_phone"
                android:textAppearance="@style/SubText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/bg_gray"
                android:padding="1dp" />


        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/get_in_touch"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:padding="@dimen/big_margin"
        android:scaleType="fitXY"
        android:src="@drawable/customer_support_icon" />

    <TextView
        android:id="@+id/get_in_touch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/bigger_margin"
        android:gravity="center"
        android:text="@string/get_in_touch"
        android:textAppearance="@style/SubText" />


</RelativeLayout>
