<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dedddd"
    tools:context="com.xperienceit.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_page_carousel_height">

                <com.synnapps.carouselview.CarouselView
                    android:id="@+id/banner_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    app:fillColor="#FFFFFF"
                    app:pageColor="#000000"
                    app:slideInterval="@integer/carousel_interval"
                    app:strokeColor="#00777777"
                    app:strokeWidth="0dp" />

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_bar_height"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/search_bar_padding"
                    android:background="@drawable/search_background"
                    android:drawableStart="@drawable/search_icon"
                    android:hint="@string/search_bar_hint"
                    android:imeOptions="actionSearch"
                    android:singleLine="true" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_margin_top"
                android:background="@drawable/frame_background"
                android:orientation="vertical"
                android:paddingBottom="@dimen/frame_bottom_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:padding="@dimen/frame_bottom_padding"
                    android:text="@string/category_grid_heading"
                    android:textAppearance="@style/FabIconTextViewStyle"
                    android:textColor="#000" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_page_cardview_margin"
                    android:minHeight="@dimen/grid_image_height"
                    app:cardCornerRadius="@dimen/card_radius"
                    card_view:cardBackgroundColor="#fff"
                    card_view:cardElevation="@dimen/cardview_elevation">

                    <ProgressBar
                        android:id="@+id/item_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/progress_bar_height"
                        android:layout_gravity="center"
                        android:visibility="visible" />

                    <com.xperienceit.MyGridView
                        android:id="@+id/grid_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:gravity="center"
                        android:horizontalSpacing="1dp"
                        android:numColumns="2"
                        android:stretchMode="columnWidth"
                        android:verticalSpacing="1dp" />

                </android.support.v7.widget.CardView>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/trending_packages_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_margin_top"
                android:background="@drawable/frame_background"
                android:orientation="vertical"
                android:paddingBottom="@dimen/frame_bottom_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:padding="@dimen/frame_bottom_padding"
                    android:text="@string/vacation_packages_heading"
                    android:textAppearance="@style/FabIconTextViewStyle"
                    android:textColor="#000" />

                <android.support.v7.widget.CardView
                    android:id="@+id/live_tours"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_page_carousel_height"
                    android:layout_margin="@dimen/main_page_cardview_margin"
                    app:cardCornerRadius="@dimen/card_radius"
                    card_view:cardElevation="@dimen/cardview_elevation">

                    <com.synnapps.carouselview.CarouselView
                        android:id="@+id/trending_packages"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusableInTouchMode="true"
                        app:fillColor="#FFFFFFFF"
                        app:pageColor="#00000000"
                        app:slideInterval="0"
                        app:strokeColor="#FF777777"
                        app:strokeWidth="1dp" />

                </android.support.v7.widget.CardView>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/special_offers_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_margin_top"
                android:background="@drawable/frame_background"
                android:orientation="vertical"
                android:paddingBottom="@dimen/frame_bottom_padding">

                <TextView
                    android:id="@+id/special_offers_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:padding="@dimen/frame_bottom_padding"
                    android:text="@string/special_offers_heading"
                    android:textAppearance="@style/FabIconTextViewStyle"
                    android:textColor="#000" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_page_carousel_height"
                    android:layout_margin="@dimen/main_page_cardview_margin"
                    app:cardCornerRadius="@dimen/card_radius"
                    card_view:cardElevation="@dimen/cardview_elevation">

                    <com.synnapps.carouselview.CarouselView
                        android:id="@+id/special_offers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusableInTouchMode="true"
                        app:fillColor="#FFFFFFFF"
                        app:pageColor="#00000000"
                        app:slideInterval="0"
                        app:strokeColor="#FF777777"
                        app:strokeWidth="1dp" />

                </android.support.v7.widget.CardView>


            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/dim_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_gray_ripple"
        android:visibility="invisible">

    </RelativeLayout>


</RelativeLayout>
